# wxwidgets-and-opengl

./: CMakeLists.txt  README.md  build_releases.sh  gitignore
src/: GLCanvas.cpp  GLCanvas.h  MainFrame.cpp  MainFrame.h  Renderer.cpp  Renderer.h  main.cpp
